--- a/rest.html
+++ b/rest.html
@@ -36,7 +36,7 @@
     <!-- main logo !-->
 	<div class="IntroMsg">
     <img  alt="Garcia Taverns where food meets passion" 
-    class="logo" src="img/s1.png" id="introLogo" width="200" height="200" />
+    class="logo" src="img/p2.png" id="introLogo" width="200" height="200" />
     </div>
         <!-- subject-->
 	<div class='IntroMsg'>
@@ -114,7 +114,7 @@
     <div class="menu">   
         <div class="menuIntro">
             <img  id="caption_img"src= "img/f1.jpg" />  
-            <img id="caption_img" src="img/f2.jpg" />
+            <img id="caption_img" src="img/76.jpg" />
         </div>
  
      <section id="home-menu">
